--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								<center><li><strong>Languages / Libraries Used:</strong> JavaScript, p5.js</li></center>
 							</ul>
 							<span class="image main"><img src="images/mst_a_star.png" alt="" /></span>
-							<p style="text-align: justify">After reading the "Introduction to algorithms", by the gang of four I wanted to expand my knowledge regarding algorithms. I wanted to recreate the minimum spanning tree in a more interactable way, and then allow the user to choose a starting and ending point, and apply a path finding algorithm to the tree. </p>
+							<p style="text-align: justify">After reading the "Introduction to algorithms", by Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein. I wanted to expand my knowledge regarding algorithms. I wanted to recreate the minimum spanning tree in a more interactable way, and then allow the user to choose a starting and ending point, and apply a path finding algorithm to the tree. </p>
 							<p>I have only implemented the A* algorithm (although not really worth it for this project), which I had a lot of troubles with. I learned a lot by trying to implemented my theoretical knowledge to practice, and I recommend anyone else who wants to learn algorithms to try and implement the algorithms that they find interesting.</p>
 							<p>You can see a snippet of the implementation for the A* algorithm below, and more precisely the formula.</p>
 							<span class="image main"><img src="images/A_star.png" alt="" /></span>
