added image, small change

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<h2 class="major">Projects</h2>
 								<p style="text-align: justify">Projects that I have worked on during my free time.</p>
 								<!-- <span class="image main"><a href="#totow"><img src="images/totow01.png" alt="" /><h3>Tale of the Ocean World</h3></a></span> -->
-								<span class="image main"><a href="#d3d_sandbox"><img src="images/mazeGen.jpg"/><h3>DirectX 11 sandbox</h3></a></span>
+								<span class="image main"><a href="#d3d_sandbox"><img src="images/d3d11.png"/><h3>DirectX 11 sandbox</h3></a></span>
 								<span class="image main"><a href="#cpp_maze"><img src="images/mazeGen.jpg"/><h3>Maze Generator and A*</h3></a></span>
 								<span class="image main"><a href="#cpp_astar"><img src="cpp-A-star/A_star_image.png"/><h3>A* Visualization with SFML</h3></a></span>
 								<span class="image main"><a href="#boxJump"><img src="images/boxJump.png"/><h3>Box jump AI using NEAT</h3></a></span>
@@ -271,9 +271,9 @@
 								<center><li><strong>Project Type:</strong> Personal</li></center>
 								<center><li><strong>Project Duration:</strong> October 3rd, 2020 - Present</li></center>
 								<center><li><strong>Software Used:</strong> Visual Studio 2019</li></center>
-								<center><li><strong>Languages / Libraries Used:</strong> C++, DirectX11, win32</li></center>
+								<center><li><strong>Languages / Libraries Used:</strong> C++, DirectX11, HLSL, win32, ImGui</li></center>
 							</ul>
-							<span class="image main"><img src="images/mazeGen.jpg" alt="" /></span>
+							<span class="image main"><img src="images/d3d11.png" alt="" /></span>
 							<p style="text-align: justify"></p>
 							<p>This is a project I wanted to tackle for a very long time. I have read and heard hundreds if not thousands of blog posts, forums, opinions, and books saying to never try and create a game engine on your own. I know it is a task that one can fully achieve only in a lifetime (still debatable), but I wanted to do it anyways. I don't want to recreate the next Unity or Unreal, but a small sandbox for me to play around with and learn new things about the DirectX API.</p>
 							<p>After reading Jason Gregory's 'Game Engine Architecture' book, I really wanted to go through that process myself. DISCLAIMER! I do not want to make game engines or renderers. I want to be a game developer, but what good is it making games if I can't understand the technology behind them?</p>
